[!] Разнес Handlers на разные классы.